# arxiv-zotero-obsidian

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
.claude/skills/arxiv-search/: SKILL.md
.claude/skills/arxiv-search/scripts/: search_arxiv.py
.claude/skills/obsidian-summarize/: SKILL.md
.claude/skills/obsidian-summarize/scripts/: create_summary.py
.claude/skills/obsidian-summarize/templates/: paper_summary.md
.claude/skills/zotero-add/: SKILL.md
.claude/skills/zotero-add/scripts/: add_to_zotero.py
.claude/skills/zotero-report/: SKILL.md
.claude/skills/zotero-report/scripts/: export_report.py  generate_report.py  pdf_extractor.py
.claude/skills/zotero-report/templates/: report_template_en.md  report_template_ko.md
config/: config.example.json
src/: __init__.py  arxiv_client.py  cli.py  config.py  obsidian_writer.py  summarizer.py  zotero_client.py
