[project]
name = "arxiv-zotero-obsidian"
version = "0.1.0"
description = "Claude Code skills for academic paper workflow: arXiv search, Zotero management, Obsidian notes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arxiv>=2.1.0",
    "pyzotero>=1.5.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
